# SID

./: .gitignore  README.md
src/walle_bringup/: CMakeLists.txt  package.xml
src/walle_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/walle_controller/: CMakeLists.txt  package.xml
src/walle_controller/config/: joy_config.yaml  joy_teleop.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml  walle_controllers.yaml
src/walle_controller/include/walle_controller/: noisy_controller.hpp  simple_controller.hpp  simple_tf_kinematics.hpp
src/walle_controller/launch/: controller.launch.py  joy_teleop.launch.py  keyboard.launch.py
src/walle_controller/src/: noisy_controller.cpp  simple_client_server.cpp  simple_controller.cpp  simple_lifecycle_node.cpp  simple_service_server.cpp  simple_tf_kinematics.cpp  twist_relay.cpp
src/walle_controller/walle_controller/: twist_to_twiststamped.py
src/walle_description/: CMakeLists.txt  package.xml
src/walle_description/launch/: display.launch.py  gazebo.launch.py
src/walle_description/meshes/: base_link.stl  caster_wheel_1.stl  imu_1.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
src/walle_description/urdf/: materials.xacro  walle.xacro  walle_gazebo.xacro  walle_ros2_control.xacro
src/walle_firmware/: CMakeLists.txt  package.xml  walle_interface.xml
src/walle_firmware/firmware/MDD10A_motor_control/: MDD10A_motor_control.ino
src/walle_firmware/include/walle_firmware/: walle_interface.hpp
src/walle_firmware/launch/: hardware_interface.launch.py
src/walle_firmware/src/: serial_reciever.cpp  serial_transmitter.cpp  walle_interface.cpp
src/walle_localization/: CMakeLists.txt  package.xml
src/walle_localization/config/: amcl.yaml
src/walle_localization/include/walle_localization/: kalman_filter.hpp  odometry_motion_model.hpp
src/walle_localization/launch/: global_localization.launch.py  localization.launch.py
src/walle_localization/src/: imu_republisher.cpp  kalman_filter.cpp  odometry_motion_model.cpp  odometry_motion_model.rviz
src/walle_mapping/: CMakeLists.txt  package.xml
src/walle_mapping/launch/: slam.launch.py
src/walle_mapping/src/: mapping_with_known_poses.cpp
src/walle_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/walle_motion/include/walle_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
src/walle_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/walle_msg/: CMakeLists.txt  package.xml
src/walle_msg/srv/: AddTwoInts.srv  GetTransform.srv
src/walle_navigation/: CMakeLists.txt  package.xml
src/walle_navigation/config/: controller_server.yaml  costmap.yaml  planner_server.yaml
src/walle_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/walle_planning/include/walle_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/walle_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
src/walle_utils/: CMakeLists.txt  package.xml
src/walle_utils/src/: safety_stop.cpp
